qcompare_impl.h: include what you use

Both enable_if and is_null_pointer belong to type_traits, include it.

Amends 631a0cc45cbe70940746cd944d325d7d3bab8c15.

Pick-to: 6.8
Fixes: QTBUG-133808
Change-Id: I9626ba80b2d9799d1bfed8ca9c9090691b8d8715
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit 72cde6f7dd9102d0c3730a75a6c85af69b8a0e3c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>